# 2D-Game-Engine

./: .gitignore  CMakeLists.txt  LICENSE
Engine/: CMakeLists.txt
Engine/include/: AnimationComponent.h  AnimationData.h  Color.h  Component.h  DebugDraw.h  EngineAPI.h  EngineConfig.h  EventSystem.h  GameObject.h  IGame.h  InputManager.h  MathUtils.h  ResourceManager.h  SparticleEngine.h  Sprite.h  SpriteComponent.h  Vector.h
Engine/src/: AnimationComponent.cpp  Component.cpp  DebugDraw.cpp  EngineInternalUtils.h  GameObject.cpp  InputManager.cpp  ResourceManager.cpp  SDLState.h  SparticleEngine.cpp  SpriteComponent.cpp  VectorImpl.cpp  VectorImpl.h
Game/: AIBlackboard.cpp  AIBlackboard.h  CMakeLists.txt  EChaseStrategy.h  EDirection.h  EGhostMode.h  EGhostPersonality.h  ETileType.h  EntityMovement.cpp  EntityMovement.h  GameConfig.h  GameEvents.h  GhostController.cpp  GhostController.h  IMovementController.h  MazeEaterGame.cpp  MazeEaterGame.h  PelletManager.cpp  PelletManager.h  Player.cpp  Player.h  PlayerController.cpp  PlayerController.h  ScoreManager.cpp  ScoreManager.h  TileMap.cpp  TileMap.h  main.cpp
Game/assets/textures/: spritesheet.atlas
SparticleEngine/: CMakeLists.txt  EngineConfig.h  GameObject.h  InputManager.cpp  InputManager.h  ResourceManager.cpp  ResourceManager.h  ResourceManagerTypes.h  SparticleEngine.cpp  SparticleEngine.h  Sprite.h  main.cpp
assets/textures/: spritesheet.atlas
